src/test/ui/json_error_format/issue-53934-multiple-parts.rs
// compile-flags: --error-format pretty-json -Zunstable-options

struct Point { x: isize, y: isize }

fn main() {
    let p = Point { x: 1, y: 2 };
    let Point { .., y, } = p;
}
